tooling: add chat/content ingestion pipeline (inbox -> process)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "next lint",
     "validate": "node scripts/validate-links.js",
     "content:report": "node scripts/content-report.js",
-    "content:sanitize": "node scripts/sanitize-content.js"
+    "content:sanitize": "node scripts/sanitize-content.js",
+    "content:ingest": "node scripts/ingest.js",
+    "content:process-inbox": "node scripts/process-inbox.js"
   },
   "dependencies": {
     "@types/d3": "^7.4.3",
