--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "glob": "^13.0.0",
+    "katex": "^0.16.11",
     "next": "^15.4.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/katex": "^0.16.7",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
